# causal-compliance-auditor

./: .gitignore  README.md  pyproject.toml
docs/: SOTA.md
examples/: bad_report.json  good_report.json
src/causalaudit/: __init__.py  __main__.py  certificate.py  checklist.py  cli.py  ingest.py
tests/: test_audit.py
